--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.firebaseui:firebase-ui-database:2.0.1'
+    //File Compressor lib
+    implementation 'id.zelory:compressor:2.1.0'
 }
 
 
